--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "みなさんのGitHub緑化をお手伝いするしりとりリポジトリです。 参加の方法は[CONTRIBUTING.md](CONTRIBUTING.md)を参照してください。",
   "main": "test.js",
   "dependencies": {
-    "github": "^2.1.0"
+    "@octokit/rest": "^14.0.9"
   },
   "devDependencies": {
     "kuromoji": "0.0.5",
@@ -15,13 +15,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/laco0416/shiritori.git"
+    "url": "git+https://github.com/lacolaco/shiritori.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/laco0416/shiritori/issues"
+    "url": "https://github.com/lacolaco/shiritori/issues"
   },
-  "homepage": "https://github.com/laco0416/shiritori#readme"
+  "homepage": "https://github.com/lacolaco/shiritori#readme"
 }
