--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 name: CI
 
-on: [push]
+on: [pull_request]
 
 jobs:
   build:
@@ -15,3 +15,6 @@ jobs:
       - run: yarn test
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PR_NUMBER: ${{ github.pull_request.number }}}
+          REPOSITORY_OWNER: lacolaco
+          REPOSITORY_NAME: shiritori
