--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,6 @@ jobs:
       - run: yarn test
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PR_NUMBER: ${{ github.pull_request.number }}}
+          PR_NUMBER: ${{ github.event.pull_request.number }}}
           REPOSITORY_OWNER: lacolaco
           REPOSITORY_NAME: shiritori
