--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@octokit/rest": "^18.6.7"
   },
   "devDependencies": {
+    "@octokit/action": "^3.10.10",
     "kuromoji": "0.0.5",
     "mocha": "^2.5.3"
   },
