--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "みなさんのGitHub緑化をお手伝いするしりとりリポジトリです。 参加の方法は[CONTRIBUTING.md](CONTRIBUTING.md)を参照してください。",
   "main": "test.js",
   "dependencies": {
-    "@octokit/rest": "^14.0.9"
+    "@octokit/rest": "^18.6.7"
   },
   "devDependencies": {
+    "@octokit/action": "^3.10.10",
     "kuromoji": "0.0.5",
     "mocha": "^2.5.3"
   },
